updated html file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 
-<body >
+<body>
     <nav class="navbar bg-[#FFF9F4] py-8 px-5">
         <div class="navbar-start gap-2">
             <img src="c1-assets/logo-header.png">
@@ -83,9 +83,9 @@
 
     <!--main-->
     <main class="bg-white mx-auto ">
-        
+
         <!--Browse By Categories-->
-        <section class="items-center px-5">
+        <section class="items-center px-5 pb-10">
             <h1 class="text-[#111111] text-4xl font-normal font-['ADLaM Display'] py-4">Browse By Categories</h1>
             <div class="grid grid-cols-2 lg:grid-cols-6 lg:gap-20 gap-4 ">
                 <!--dog-->
@@ -164,8 +164,189 @@
         </section>
 
         <!--Trending Pet Products-->
-        <section>
+        <section class="items-center px-5 py-9 lg: bg-[#FFF9F4]">
+            <h1 class="text-[#111111] text-4xl font-normal font-['ADLaM Display'] py-4">Trending Pet Products</h1>
+            <div class="lg:flex">
+                <div class="w-[357.55px] h-[339px] bg-[#f9df8a] rounded-lg lg:w-[424px] h-[402px]">
+                    <div class="absolute lg:pl-8 lg:pt-16 pl-6 pt-7">
+                        <h1 class="text-3xl text-2xl font-Adlam">T-Shirt For Dogs</h1>
+                        <p class="text-gray-600  lg:pb-6 font-normal font-[Sora] leading-6 text-base pt-2 pb-2">Discover
+                            a world of treats, toys and <br>essentials handpicked for</p>
+                        <a class="btn bg-white text-base lg:text-xl font-[Sora] font-normal">Shop Now</a>
+                    </div>
+                    <div class="pl-48 lg:pt-36 pt-20">
+                        <img class="w-[205.76px] h-[270.69px] lg:w-[200px] " src="c1-assets/cute-pet-mid.png">
+                    </div>
+                </div>
 
+                <div class="lg:ml-5 lg:gap-x-11 lg:gap-y-6 lg:mt-0  grid lg:grid-cols-3 grid-cols-2 mt-9 gap-y-3 gap-x-2">
+                    <div
+                        class="lg:w-[275px] lg:h-[118px] bg-white lg:rounded-[10px] border border-[#111111]/10 flex items-center pl-4 w-[171.24px] h-[73.48px] rounded-md">
+                        <div
+                            class="lg:w-[86px] lg:h-[86px] bg-[#FFF9F4] lg:rounded-[10px] w-[53.55px] h-[53.55px] rounded-md">
+                            <img class="lg:pt-[19px] lg:pl-[19px]  pt-1 pl-1 lg:block hidden"
+                                src="c1-assets/dog-cartoon.png">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1 lg:hidden" src="c1-assets/pet-couch.png">
+                        </div>
+                        <div class="lg:pl-4 pl-3">
+                            <h1
+                                class="lg:text-base font-normal flex items-center font-[Sora] lg:gap-3 gap-2 text-[9.96px] ">
+                                <img src="c1-assets/star.png" class="lg:w-[18px] lg:h-[18px] w-[11.21px] h-[11.21px] ">4.5
+                            </h1>
+                            <h1 class="lg:text-xl font-medium  font-[Sora] text-xs">Pet Bed</h1>
+                            <h1 class="lg:text-base font-medium font-[Sora]  text-[9.96px] ">$39.99</h1>
+                        </div>
+                    </div>
+                    <div
+                        class="lg:w-[275px] lg:h-[118px] bg-white lg:rounded-[10px] border border-[#111111]/10 flex items-center pl-4 w-[171.24px] h-[73.48px] rounded-md">
+                        <div
+                            class="lg:w-[86px] lg:h-[86px] bg-[#FFF9F4] lg:rounded-[10px] w-[53.55px] h-[53.55px] rounded-md">
+                            <img class="lg:pt-[19px] lg:pl-[19px]  pt-1 pl-1 lg:block hidden"
+                                src="c1-assets/fish-cartoon.png">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1 lg:hidden" src="c1-assets/pet-couch.png">
+                        </div>
+                        <div class="lg:pl-4 pl-3">
+                            <h1
+                                class="lg:text-base font-normal flex items-center font-[Sora] lg:gap-3 gap-2 text-[9.96px] ">
+                                <img src="c1-assets/star.png" class="lg:w-[18px] lg:h-[18px] w-[11.21px] h-[11.21px] ">4.5
+                            </h1>
+                            <h1 class="lg:text-xl font-medium  font-[Sora] text-xs">Pet Bed</h1>
+                            <h1 class="lg:text-base font-medium font-[Sora]  text-[9.96px] ">$39.99</h1>
+                        </div>
+                    </div>
+                    <div
+                        class="lg:w-[275px] lg:h-[118px] bg-white lg:rounded-[10px] border border-[#111111]/10 flex items-center pl-4 w-[171.24px] h-[73.48px] rounded-md">
+                        <div
+                            class="lg:w-[86px] lg:h-[86px] bg-[#FFF9F4] lg:rounded-[10px] w-[53.55px] h-[53.55px] rounded-md">
+                            <img class="lg:pt-[19px] lg:pl-[19px]  pt-1 pl-1 lg:block hidden"
+                                src="c1-assets/bird-cartoon.png">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1 lg:hidden" src="c1-assets/pet-couch.png">
+                        </div>
+                        <div class="lg:pl-4 pl-3">
+                            <h1
+                                class="lg:text-base font-normal flex items-center font-[Sora] lg:gap-3 gap-2 text-[9.96px] ">
+                                <img src="c1-assets/star.png" class="lg:w-[18px] lg:h-[18px] w-[11.21px] h-[11.21px] ">4.5
+                            </h1>
+                            <h1 class="lg:text-xl font-medium  font-[Sora] text-xs">Pet Bed</h1>
+                            <h1 class="lg:text-base font-medium font-[Sora]  text-[9.96px] ">$39.99</h1>
+                        </div>
+                    </div>
+                    <div
+                        class="lg:w-[275px] lg:h-[118px] bg-white lg:rounded-[10px] border border-[#111111]/10 flex items-center pl-4 w-[171.24px] h-[73.48px] rounded-md">
+                        <div
+                            class="lg:w-[86px] lg:h-[86px] bg-[#FFF9F4] lg:rounded-[10px] w-[53.55px] h-[53.55px] rounded-md">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1 lg:block hidden"
+                                src="c1-assets/rabbit-cartoon.png">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1 lg:hidden" src="c1-assets/pet-couch.png">
+                        </div>
+                        <div class="lg:pl-4 pl-3">
+                            <h1
+                                class="lg:text-base font-normal flex items-center font-[Sora] lg:gap-3 gap-2 text-[9.96px] ">
+                                <img src="c1-assets/star.png" class="lg:w-[18px] lg:h-[18px] w-[11.21px] h-[11.21px] ">4.5
+                            </h1>
+                            <h1 class="lg:text-xl font-medium  font-[Sora] text-xs">Pet Bed</h1>
+                            <h1 class="lg:text-base font-medium font-[Sora]  text-[9.96px] ">$39.99</h1>
+                        </div>
+                    </div>
+                    <div
+                        class="lg:w-[275px] lg:h-[118px] bg-white lg:rounded-[10px] border border-[#111111]/10 flex items-center pl-4 w-[171.24px] h-[73.48px] rounded-md">
+                        <div
+                            class="lg:w-[86px] lg:h-[86px] bg-[#FFF9F4] lg:rounded-[10px] w-[53.55px] h-[53.55px] rounded-md">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1 lg:block hidden"
+                                src="c1-assets/bird-cartoon.png">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1 lg:hidden" src="c1-assets/pet-couch.png">
+                        </div>
+                        <div class="lg:pl-4 pl-3">
+                            <h1
+                                class="lg:text-base font-normal flex items-center font-[Sora] lg:gap-3 gap-2 text-[9.96px] ">
+                                <img src="c1-assets/star.png" class="lg:w-[18px] lg:h-[18px] w-[11.21px] h-[11.21px] ">4.5
+                            </h1>
+                            <h1 class="lg:text-xl font-medium  font-[Sora] text-xs">Pet Bed</h1>
+                            <h1 class="lg:text-base font-medium font-[Sora]  text-[9.96px] ">$39.99</h1>
+                        </div>
+                    </div>
+                    <div
+                        class="lg:w-[275px] lg:h-[118px] bg-white lg:rounded-[10px] border border-[#111111]/10 flex items-center pl-4 w-[171.24px] h-[73.48px] rounded-md">
+                        <div
+                            class="lg:w-[86px] lg:h-[86px] bg-[#FFF9F4] lg:rounded-[10px] w-[53.55px] h-[53.55px] rounded-md">
+                            <img class="lg:pt-[19px] lg:pl-[19px]  pt-1 pl-1" src="c1-assets/pet-couch.png">
+                        </div>
+                        <div class="lg:pl-4 pl-3">
+                            <h1
+                                class="lg:text-base font-normal flex items-center font-[Sora] lg:gap-3 gap-2 text-[9.96px] ">
+                                <img src="c1-assets/star.png" class="lg:w-[18px] lg:h-[18px] w-[11.21px] h-[11.21px] ">4.5
+                            </h1>
+                            <h1 class="lg:text-xl font-medium  font-[Sora] text-xs">Pet Bed</h1>
+                            <h1 class="lg:text-base font-medium font-[Sora]  text-[9.96px] ">$39.99</h1>
+                        </div>
+                    </div>
+                    <div
+                        class="hidden lg:w-[275px] lg:h-[118px] bg-white lg:rounded-[10px] border border-[#111111]/10 lg:flex items-center pl-4 w-[171.24px] h-[73.48px] rounded-md">
+                        <div
+                            class="lg:w-[86px] lg:h-[86px] bg-[#FFF9F4] lg:rounded-[10px] w-[53.55px] h-[53.55px] rounded-md">
+                            <img class="lg:pt-[19px] lg:pl-[19px]  pt-1 pl-1 lg:block hidden"
+                                src="c1-assets/fish-cartoon.png">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1 lg:hidden" src="c1-assets/pet-couch.png">
+                        </div>
+                        <div class="lg:pl-4 pl-3">
+                            <h1
+                                class="lg:text-base font-normal flex items-center font-[Sora] lg:gap-3 gap-2 text-[9.96px] ">
+                                <img src="c1-assets/star.png" class="lg:w-[18px] lg:h-[18px] w-[11.21px] h-[11.21px] ">4.5
+                            </h1>
+                            <h1 class="lg:text-xl font-medium  font-[Sora] text-xs">Pet Bed</h1>
+                            <h1 class="lg:text-base font-medium font-[Sora]  text-[9.96px] ">$39.99</h1>
+                        </div>
+                    </div>
+                    <div
+                        class="lg:w-[275px] lg:h-[118px] bg-white lg:rounded-[10px] border border-[#111111]/10 flex items-center pl-4 w-[171.24px] h-[73.48px] rounded-md">
+                        <div
+                            class="lg:w-[86px] lg:h-[86px] bg-[#FFF9F4] lg:rounded-[10px] w-[53.55px] h-[53.55px] rounded-md">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1" src="c1-assets/pet-couch.png">
+                        </div>
+                        <div class="lg:pl-4 pl-3">
+                            <h1
+                                class="lg:text-base font-normal flex items-center font-[Sora] lg:gap-3 gap-2 text-[9.96px] ">
+                                <img src="c1-assets/star.png" class="lg:w-[18px] lg:h-[18px] w-[11.21px] h-[11.21px] ">4.5
+                            </h1>
+                            <h1 class="lg:text-xl font-medium  font-[Sora] text-xs">Pet Bed</h1>
+                            <h1 class="lg:text-base font-medium font-[Sora]  text-[9.96px] ">$39.99</h1>
+                        </div>
+                    </div>
+                    <div
+                        class="lg:w-[275px] lg:h-[118px] bg-white lg:rounded-[10px] border border-[#111111]/10 flex items-center pl-4 w-[171.24px] h-[73.48px] rounded-md">
+                        <div
+                            class="lg:w-[86px] lg:h-[86px] bg-[#FFF9F4] lg:rounded-[10px] w-[53.55px] h-[53.55px] rounded-md">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1 lg:block hidden"
+                                src="c1-assets/rabbit-cartoon.png">
+                            <img class="lg:pt-[19px] lg:pl-[19px] pt-1 pl-1 lg:hidden" src="c1-assets/pet-couch.png">
+                        </div>
+                        <div class="lg:pl-4 pl-3">
+                            <h1
+                                class="lg:text-base font-normal flex items-center font-[Sora] lg:gap-3 gap-2 text-[9.96px] ">
+                                <img src="c1-assets/star.png" class="lg:w-[18px] lg:h-[18px] w-[11.21px] h-[11.21px] ">4.5
+                            </h1>
+                            <h1 class="lg:text-xl font-medium  font-[Sora] text-xs">Pet Bed</h1>
+                            <h1 class="lg:text-base font-medium font-[Sora]  text-[9.96px] ">$39.99</h1>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            </div>
+        </section>
+        <!--Everyday low Price-->
+        <section class="items-center px-5 ">
+            <h1 class="text-[#111111] text-4xl font-normal font-['ADLaM Display'] py-7">Everyday low Price</h1>
+            <div class="lg:flex">
+                <div class="lg:w-[784px] lg:h-[480px] bg-gradient-to-r from-[#f8ccfb] to-[#acd2fd] rounded-xl flex lg:pl-24 w-[400px] h-[334.69px] pl-8 lg:pt-0 pt-10 ">
+                    <div>
+                        <h1></h1>
+                    </div>
+                </div>
+                <div>
+
+                </div>
+            </div>
         </section>
     </main>
 </body>
