update html file

--- a/index.html
+++ b/index.html
@@ -337,13 +337,27 @@
         <!--Everyday low Price-->
         <section class="items-center px-5 ">
             <h1 class="text-[#111111] text-4xl font-normal font-['ADLaM Display'] py-7">Everyday low Price</h1>
-            <div class="lg:flex">
-                <div class="lg:w-[784px] lg:h-[480px] bg-gradient-to-r from-[#f8ccfb] to-[#acd2fd] rounded-xl flex lg:pl-24 w-[400px] h-[334.69px] pl-8 lg:pt-0 pt-10 ">
-                    <div>
-                        <h1></h1>
+            <div class="lg:flex space-x-5">
+                <div class=" pb: lg:w-[784px] lg:h-[480px] bg-gradient-to-r from-[#f8ccfb] to-[#acd2fd] rounded-xl flex lg:pl-24 w-[400px] h-[334.69px] pl-8 lg:pt-0 pt-10 ">
+                    <div class="lg:pt-32">
+                        <h1 class="text-black  font-['Sora']">Under Price</h1>
+                        <h1 class="text-black text-[32px] font-['ADLaM Display']">Pet Grooming Mitt</h1>
+                        <h1 class="text-white text-2xl font-['ADLaM Display']">(Easy Hair Removal)</h1>
+                        <h1 class="text-black text-[56px] font-['ADLaM Display']">$7.99</h1>
+                    </div>
+                    <div class="w-[382.49px] h-[480px] rounded-[10px] ">
+                        <img src="c1-assets/cute-dog-mid.png">
                     </div>
                 </div>
-                <div>
+                <div class="w-[512px] h-[480px] bg-gradient-to-r from-[#fff9f4] to-[#f9df8a] rounded-xl">
+                    <div class="absolute lg: pl-12 pt-16">
+                        <h1 class="text-black text-[32px] font-normal font-['ADLaM Display']">T-Shirt for Dogs</h1>
+                        <h1 class="text-[#ffdc26] text-[56px] font-normal font-['ADLaM Display']">$7.99</h1>
+
+                    </div>
+                    <div class="lg:pt-24 lg:pl-40 pl-36 pt-6">
+                        <img class="lg:w-[312px] lg:h-[392px] w-[214px] h-[268px] " src="c1-assets/cute-pet-mid.png">
+                    </div>
 
                 </div>
             </div>
