updated html file

--- a/index.html
+++ b/index.html
@@ -335,21 +335,21 @@
             </div>
         </section>
         <!--Everyday low Price-->
-        <section class="items-center px-5 ">
+        <section class="items-center px-5  ">
             <h1 class="text-[#111111] text-4xl font-normal font-['ADLaM Display'] py-7">Everyday low Price</h1>
             <div class="lg:flex space-x-5">
-                <div class=" pb: lg:w-[784px] lg:h-[480px] bg-gradient-to-r from-[#f8ccfb] to-[#acd2fd] rounded-xl flex lg:pl-24 w-[400px] h-[334.69px] pl-8 lg:pt-0 pt-10 ">
+                <div class=" lg:w-[784px] lg:h-[480px] bg-gradient-to-r from-[#f8ccfb] to-[#acd2fd] rounded-xl flex lg:pl-24 w-[400px] h-[334.69px] pl-8 lg:pt-0 pt-10 ">
                     <div class="lg:pt-32">
                         <h1 class="text-black  font-['Sora']">Under Price</h1>
                         <h1 class="text-black text-[32px] font-['ADLaM Display']">Pet Grooming Mitt</h1>
                         <h1 class="text-white text-2xl font-['ADLaM Display']">(Easy Hair Removal)</h1>
                         <h1 class="text-black text-[56px] font-['ADLaM Display']">$7.99</h1>
                     </div>
-                    <div class="w-[382.49px] h-[480px] rounded-[10px] ">
+                    <div class="lg:w-[382.49px] lg:h-[480px] w-[214px] h-[268px]">
                         <img src="c1-assets/cute-dog-mid.png">
                     </div>
                 </div>
-                <div class="w-[512px] h-[480px] bg-gradient-to-r from-[#fff9f4] to-[#f9df8a] rounded-xl">
+                <div class="w-[400px] h-[334.69px] pl-8 lg:pt-0 pt-10 lg:mt-0 mt-8 lg:w-[512px] h-[480px] bg-gradient-to-r from-[#fff9f4] to-[#f9df8a] rounded-xl">
                     <div class="absolute lg: pl-12 pt-16">
                         <h1 class="text-black text-[32px] font-normal font-['ADLaM Display']">T-Shirt for Dogs</h1>
                         <h1 class="text-[#ffdc26] text-[56px] font-normal font-['ADLaM Display']">$7.99</h1>
@@ -363,6 +363,50 @@
             </div>
         </section>
     </main>
+
+    <!--footer-->
+    <footer class=" bg-[#ffdc26]/50 pt-80 lg:pb-36 relative pt-96 pb-16">
+        <div class="bg-[#FFF9F4] lg:mx-[140px] relative top-[-270px] left-0 right-0 z-10 rounded-xl lg:flex lg:space-x-32 lg:py-10 lg:px-28 mx-4 py-10" >
+          <div class="lg:justify-items-start justify-items-center">
+            <img class="lg:w-full w-1/2" src="c1-assets/cute-pet-mid.png" >
+          </div>
+          <div class="lg:space-y-7 lg:pt-20 lg:justify-items-start justify-items-center space-y-5">
+            <h1 class="font-Adlam lg:text-4xl font-normal text-[22px]">Get Pawsome News!</h1>
+            <h1 class="font-Sora lg:text-xl text-base font-normal lg:px-0 px-9">Exclusive training tips, ticks, product deals and more.</h1>
+            <div>
+              <label class="input input-bordered flex items-center gap-2">
+                <input type="text" class="grow" placeholder="Enter email" />
+              </label>
+            </div>
+            <button class="btn bg-[#ffdc26] lg:text-xl font-Sora font-normal text-base">Subscribe</button>
+          </div>
+        </div>
+        <div class="lg:flex font-Sora lg:space-x-52 lg:px-36 px-5 lg:space-y-0 space-y-10">
+          <div class="lg:space-y-4 space-y-3">
+            <div class="flex space-x-2">
+              <img src="c1-assets/logo-footer.png">
+              <h1 class="lg:text-[26px] font-normal text-[19.18px] lg:pt-0 pt-3">
+                Browse<span class="text-[#ffdc26] ">4</span>Pets
+            </h1>
+            </div>
+            <p class="lg:text-xl text-[#111111]/70 lg:leading-8">Discover a world of treats, toys, and<br> essentials handpicked for your furry friends</p>
+  
+          </div>
+          <div class=" lg:text-xl leading-10 lg:leading-10">
+            <a>Find a pet</a><br>
+            <a>Breeds</a><br>
+            <a>Contact us</a>
+          </div>
+          <div class="lg:space-y-5 space-y-3">
+            <h1 class="lg:text-xl ">Follow Us</h1>
+            <div class="lg:w-[184.13px] flex lg:space-x-3 space-x-6 w-[200px]">
+            <a><img src="c1-assets/social.png"></a>
+            
+            </div>
+            
+          </div>
+        </div>
+      </footer>
 </body>
 
 </html>
